tests/specs/ecosystem/std/archive/0_217_0.test
std/archive/0.217.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/io@^0.217.0": "jsr:@std/io@0.217.0"
    },
    "jsr": {
      "@std/io@0.217.0": {
        "integrity": "08d3dd7c10956d1433be95306ec15179cdebe49a0ce5a74238fabf140bb74382"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

error: Type checking failed.

